src/assets/scss/style.scss
/* ... */
.contact-page .form-field__item {
  margin-top: 6px;
}

.contact-page .form-field__item input {
  border-radius: 10px;
}

.contact-page .form-field__item:hover {
  border-color: #6adeff;
  border-radius: 10px;
  box-shadow: 0px 0px 4px 0px #6adeff;
}

.contact-page .form-field__item [type="text"],
.contact-page .form-field__item [type="email"],
.contact-page .form-field__item [type="tel"] {
  background: #ffffff;
  border: 1px solid #1fbbe7;
  color: #2d2d32;
  font-family: "Noto Serif JP", serif;
  font-size: 16px;
  padding: 16px;
  width: 100%;
}

.contact-page .form-field__item textarea {
  background: #ffffff;
  border: 1px solid #1fbbe7;
  border-radius: 10px;
  color: #2d2d32;
  font-family: "Noto Serif JP", serif;
  font-size: 16px;
  height: 160px;
  padding-left: 16px;
  padding-right: 13px;
  padding-top: 13px;
  width: 100%;
}

.contact-page .form-field__item textarea::placeholder {
  color: #bdbdbd;
}

.works-page {
  background: url(../img/words-page-bg.webp) no-repeat center center/cover;
  height: auto;
  overflow: hidden;
  position: relative;
  width: 100%;
  z-index: 0;
}

.works-page::before {
  background: inherit;
  content: "";
  filter: blur(3px);
  inset: 0;
  position: absolute;
  transform: scale(1.1);
  z-index: -1;
}

.works-page::after {
  background: rgba(0, 0, 0, 0.2);
  content: "";
  inset: 0;
  position: absolute;
  z-index: -1;
}

.works-page .works-page__inner {
  box-sizing: border-box;
  margin-inline: auto;
  max-width: 1250px;
  padding-bottom: 80px;
  padding-inline: 40px;
}

.works-page .works-page__title {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding-bottom: 80px;
  padding-top: 80px;
  position: relative;
  z-index: 1;
}

.works-page .works-page__swiper {
  padding-bottom: 140px;
}

.works-page .swiper-pagination span {
  border-radius: 4px;
  display: inline-block;
  height: auto;
  margin: 0 4px;
  overflow: hidden;
  width: 170px;
}

.works-page .swiper-pagination span:nth-child(n + 5) {
  display: none; /* 5番目以降は非表示 */
}

.works-page .swiper-pagination img {
  height: 100%;
  width: 100%;
  -o-object-fit: cover;
  object-fit: cover;
}

.works-page .card__wrap {
  display: flex;
  justify-content: center;
}

.works-page .works-page__card {
  aspect-ratio: 16/9;
  background: rgb(242, 242, 242);
  border: 1px solid #2d2d32;
  border-radius: 8px;
  max-width: 750px;
  padding: 10px 10px 65px 10px;
  width: 100%;
  z-index: 1;
}

.works-page .works-page__card > a {
  color: inherit;
  display: block;
  height: 100%;
  text-decoration: none;
}

.works-page .works-page__image {
  aspect-ratio: 16/9;
  border-radius: 8px;
  overflow: hidden;
}

.works-page .works-page__body {
  height: clamp(75px, 75px + 25 * (100vw - 375px) / 1065, 100px);
}

.works-page .works-page__card-title {
  font-size: 16px;
  font-weight: 700;
  margin-top: 14px;
}

.works-page .works-page__text {
  font-size: 14px;
  margin-top: 11px;
}

.works-page .swiper-pagination {
  display: none;
}

.works-page .swiper-button-prev,
.works-page .swiper-button-next {
  height: clamp(50px, 50px + 10 * (100vw - 375px) / 393, 60px);
  margin-top: clamp(130px, 130px + (100vw - 375px) * 0.2544529262, 230px);
  width: clamp(50px, 50px + 10 * (100vw - 375px) / 393, 60px);
}

.works-page .swiper-button-prev::after,
.works-page .swiper-button-next::after {
  display: none;
}

.works-page .swiper-button-prev {
  background: url(../img/arrow-prev-icon-2.png) no-repeat center center/contain;
  left: clamp(120px, 120px + 355 * (100vw - 375px) / 393, 475px);
}

.works-page .swiper-button-next {
  background: url(../img/arrow-next-icon-2.png) no-repeat center center/contain;
  right: var(--swiper-navigation-sides-offset, 40px);
}

.works-page .swiper-scrollbar {
  display: none;
}

.works-page .swiper-scrollbar-drag {
  display: none;
}

.works-page .works-page__cards-container {
  display: grid;
  gap: clamp(40px, 40px + 40 * (100vw - 375px) / 672, 80px);
  grid-template-columns: 1fr;
}

.works-page .works-page__grid-card {
  background: #eeeeee;
  border-radius: 5px;
  margin-inline: auto;
  max-width: 500px;
  padding: 10px;
  padding-bottom: 25px;
  position: relative;
}

.works-page .works-page__grid-card > a {
  color: inherit;
  display: block;
  text-decoration: none;
}

.works-page .works-page__grid-card > a::after {
  content: "";
  cursor: pointer;
  inset: 0;
  position: absolute;
  z-index: 3;
}

.works-page .works-page__grid-card--lp .grid-card__badge svg text {
  font-size: 55px;
}

.works-page .works-page__grid-card--corporate .grid-card__badge svg text {
  font-size: 40px;
}

.works-page .grid-card__image {
  border-radius: 5px;
  overflow: hidden;
}

.works-page .grid-card__badge {
  left: -17px;
  position: absolute;
  top: 15px;
}

.works-page .grid-card__badge svg {
  height: auto;
  width: 80px;
}

.works-page .grid-card__badge svg text {
  color: #ffffff;
  font-family: "Noto Serif JP", serif;
  font-weight: 700;
}

.works-page .grid-card__title {
  font-size: clamp(16px, 16px + 4 * (100vw - 1024px) / 416, 20px);
  font-weight: 700;
  margin-bottom: 10px;
  margin-top: 10px;
}

.works-page .grid-card__label {
  display: flex;
  gap: 20px;
  margin-left: 20px;
}

@media screen and (min-width: 768px) {
  .about .about__image {
    width: 350px;
  }

  .contact-page .contact-page__form {
    padding-left: 70px;
    padding-right: 70px;
  }

  .works-page .works-page__inner {
    padding-bottom: 140px;
  }

  .works-page .works-page__card {
    padding: 20px 20px 40px 20px;
  }

  .works-page .works-page__cards-container {
    grid-template-columns: repeat(2, 1fr);
    row-gap: clamp(50px, 50px + 10 * (100vw - 1024px) / 416, 60px);
    -moz-column-gap: clamp(40px, 40px + 10 * (100vw - 1024px) / 416, 50px);
    column-gap: clamp(40px, 40px + 10 * (100vw - 1024px) / 416, 50px);
  }
}
/* ... */

